--- a/src/app/feature/work/components/experience.component.html
+++ b/src/app/feature/work/components/experience.component.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="flex flex-col mt-20 gap-y-2">
-                <div id="workingPeriodMobile" class="text-white">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
+                <div id="workingPeriodMobile" class="text-white">{{ experience.timePeriod.dateFrom | date : 'MMMM yyyy' }} — {{ experience.timePeriod.dateUntil| date : 'MMMM yyyy' }}</div>
                 <app-experience-card id="experienceCardMobile" [history]="experience"></app-experience-card>
             </div>
         }
@@ -25,7 +25,7 @@
     <div class="hidden lg:grid grid-cols-[1fr_0.1rem_1fr] gap-x-16">
         @for(experience of history; track experience; let odd = $odd) {
             @if (odd) {
-                <div id="workingPeriodDesktop" class="text-white text-right mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
+                <div id="workingPeriodDesktop" class="text-white text-right mt-24">{{ experience.timePeriod.dateFrom | date : 'MMMM yyyy' }} — {{ experience.timePeriod.dateUntil | date : 'MMMM yyyy' }}</div>
                 <div class="relative bg-gradient-to-b from-red-500 via-red-700 to-red-500">
                     <div class="absolute -translate-x-1/2 mt-20">
                         <div class="flex flex-row justify-center items-center w-16 h-16 px-2 py-2 bg-white rounded-full border-4 border-red-500">
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="workingPeriodDesktop" class="text-white mt-24">{{ experience.dateFrom | date : 'MMMM yyyy' }} — {{ experience.dateUntil | date : 'MMMM yyyy' }}</div>
+                <div id="workingPeriodDesktop" class="text-white mt-24">{{ experience.timePeriod.dateFrom| date : 'MMMM yyyy' }} — {{ experience.timePeriod.dateUntil | date : 'MMMM yyyy' }}</div>
             }
         }
     </div>
