--- a/src/app/feature/work/components/employment-reference-carousel.component.html
+++ b/src/app/feature/work/components/employment-reference-carousel.component.html
@@ -11,18 +11,20 @@
 
         <!--  Reference Card -->
         @for(employmentReference of employmentReferences; track employmentReference; let idx =$index) {
-            <div id="employmentReferenceCard" class="bg-gradient-to-b from-stone-800 to-stone-900 px-12 py-12 rounded-xl ring-1 ring-black/5" [ngClass]="{'hidden': currentIndex !== idx, 'block': currentIndex === idx }">
-                <p id="quote" class="text-4xl font-bold text-red-500">"</p>
+            <app-card-secondary-wrapper [ngClass]="{'hidden': currentIndex !== idx, 'block': currentIndex === idx }">
+                <div id="employmentReferenceCard" class="px-12 py-12">
+                    <p id="quote" class="text-4xl font-bold text-red-500">"</p>
 
-                <p id="employmentReferenceText" class="text-white text-base mt-5">{{ employmentReference.reference }}</p>
+                    <p id="employmentReferenceText" class="text-white text-base mt-5">{{ employmentReference.reference }}</p>
 
-                <div class="flex flex-row justify-end items-center space-x-4 mt-4">
-                    <p id="institution" class="text-red-500">{{"@"}}{{ employmentReference.institution }}</p>
-                    <div class="hidden lg:flex lg:flex-row justify-center items-center w-12 h-12 px-2 py-2 bg-white rounded-full border-2 border-red-500">
-                        <img id="logo" src="{{ employmentReference.logo.srcImage }}" alt="{{ employmentReference.logo.alt }}">
+                    <div class="flex flex-row justify-end items-center space-x-4 mt-4">
+                        <p id="institution" class="text-red-500">{{"@"}}{{ employmentReference.institution }}</p>
+                        <div class="hidden lg:flex lg:flex-row justify-center items-center w-12 h-12 px-2 py-2 bg-white rounded-full border-2 border-red-500">
+                            <img id="logo" src="{{ employmentReference.logo.srcImage }}" alt="{{ employmentReference.logo.alt }}">
+                        </div>
                     </div>
                 </div>
-            </div>
+            </app-card-secondary-wrapper>
         }
 
         <!--  Next Button -->
